<resources>
    <string name="app_name">Quiz Me</string>
    <string name="highscore_text">Highscore: 0</string>
    <string name="title_text">Quiz Me</string>
    <string name="start_quiz_button_text">Start Quiz</string>
    <string name="highscore_text_label">\"Highscore: \"</string>
    <string name="score_text">Score: 0</string>
    <string name="question_text">Question: 1/x</string>
    <string name="difficulty_text">Difficulty:</string>
    <string name="countdown_text">00:30</string>
    <string name="question_text_box">Here will be the question text \nHere will be the question text \nHere will be the question text</string>
    <string name="option_1_spinner_text">Option 1</string>
    <string name="option_2_spinner_text">Option 2</string>
    <string name="option_3_spinner_text">Option 3</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="difficulty_label_text">Difficulty: </string>
    <string name="select_answer_message">Please select an answer.</string>
    <string name="question_label_text">Question: </string>
    <string name="confirm_text_label">Confirm</string>
    <string name="score_label_text">Score: </string>
    <string name="answer1_correct_text">Answer 1 is correct</string>
    <string name="answer2_correct_text">Answer 2 is correct</string>
    <string name="answer3_correct_text">Answer 3 is correct</string>
    <string name="next_button_text">Next</string>
    <string name="finish_button_text">Finish</string>
    <string name="press_back_message">Press back again to finish.</string>
    <string name="category_text">"Category: "</string>
    <string name="category_label_text">"Category: "</string>
</resources>