<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="@dimen/dimen_16dp"
    tools:context=".view.QuizActivity">


    <TextView
        android:id="@+id/score_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_text"
        android:layout_margin="@dimen/dimen_16dp"
        android:textColor="@android:color/black"
        android:freezesText="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/question_text"
        android:textColor="@android:color/black"
        android:freezesText="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_textview" />

    <TextView
        android:id="@+id/category_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/category_text"
        android:textColor="@android:color/black"
        android:freezesText="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_label_textview" />

    <TextView
        android:id="@+id/difficulty_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/difficulty_text"
        android:textColor="@android:color/black"
        android:freezesText="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_textview" />

    <TextView
        android:id="@+id/counter_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/countdown_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dimen_40sp"
        android:freezesText="true"
        app:layout_constraintBottom_toBottomOf="@+id/difficulty_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_126dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:text="@string/question_text_box"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dimen_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_textview" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_textView">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1_spinner_text"
            android:freezesText="true" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2_spinner_text"
            android:freezesText="true" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3_spinner_text"
            android:freezesText="true" />

    </RadioGroup>

    <Button
        android:id="@+id/confirm_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/confirm_button_text"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:freezesText="true" />

</androidx.constraintlayout.widget.ConstraintLayout>